# parallel_solver_wave_equation

./: .gitignore  CMakeLists.txt  Coursework_Assignment.docx  README.md  Wave_MPI.cpp  script.pbs
